Track 2 files into repository.
- modified env/环境搭建.md
- modified env/服务器配置/服务器配置.md

Auto commit by GitBook Editor

--- a/env/服务器配置/服务器配置.md
+++ b/env/服务器配置/服务器配置.md
@@ -1,9 +1,4 @@
 # Linux 服务器配置
 
-* 服务器配置模板
+* [服务器配置模板]()
     * [h5bp/server-configs](https://github.com/h5bp/server-configs) - Boilerplate configurations for various web servers.
-
-* [Apache httpd](Apache.md)
-* [Lighttpd](Lighttpd.md)
-* [Nginx](Nginx.md)
-* [Node.js](Node.js.md)
