--- a/env/环境搭建.md
+++ b/env/环境搭建.md
@@ -1,1 +1,7 @@
 # 环境搭建
+
+# 服务器配置
+    - [Apache httpd](服务器配置/Apache.md)
+    - [Lighttpd](服务器配置/Lighttpd.md)
+    - [Nginx](服务器配置/Nginx.md)
+    - [Node.js](服务器配置/Node.js.md)
