--- a/env/服务器配置/服务器配置.md
+++ b/env/服务器配置/服务器配置.md
@@ -2,3 +2,5 @@
 
 * 服务器配置模板
     * [h5bp/server-configs](https://github.com/h5bp/server-configs) - Boilerplate configurations for various web servers.
+
+* [Apache httpd](Apache.md)
